hphp/hack/test/typecheck/expression_trees/nested_expression_trees.php.exp
File "nested_expression_trees.php", line 6, characters 16-25:
Nested expression trees must not provide the DSL name (it is inherited from the enclosing tree). (Parsing[1002])
File "nested_expression_trees.php", line 6, characters 16-28:
Cannot use unstable feature: `expression_tree_nest` (Parsing[1002])
